# openai-req

./: Cargo.toml
src/: openai-req.rs
